@@ -9,14 +9,14 @@ lib_LTLIBRARIES     = libdfsch.la libdfsch_load.la
 EXTRA_DIST = scm/morse.scm tests/scm-test.sh scm/test.scm
 
 
-libdfsch_la_SOURCES = src/dfsch.c dfsch/dfsch.h src/object.h \
+libdfsch_la_SOURCES = src/dfsch.c dfsch/dfsch.h src/object.h src/internal.h\
 	src/stream.c dfsch/stream.h \
-	src/native.c src/native.h \
+	src/native.c\
 	src/util.c src/util.h \
 	src/hash.c dfsch/hash.h \
 	src/promise.c dfsch/promise.h \
 	src/number.c dfsch/number.h \
-	src/strings.c dfsch/strings.h
+	src/strings.c dfsch/strings.h 
 
 libdfsch_la_LDFLAGS = -version-info 4:0:0
 libdfsch_la_LIBADD =  -lgc -lpthread -ldl
