@@ -24,7 +24,7 @@
 # include <config.h>
 #endif
 
-#include "native.h"
+#include "internal.h"
 #include <dfsch/hash.h>
 #include <dfsch/promise.h>
 #include "util.h"
@@ -907,77 +907,6 @@ static object_t* native_list_2_vector(void *baton, object_t* args){
 
 /////////////////////////////////////////////////////////////////////////////
 //
-// Hash operations
-//
-/////////////////////////////////////////////////////////////////////////////
-
-
-object_t* native_make_hash(void* baton, object_t* args){
-  object_t* proc;
-  DFSCH_OBJECT_ARG_OPT(args, proc, NULL);
-  DFSCH_ARG_END(args);
-
-  return dfsch_hash_make(proc);
-}
-object_t* native_hash_p(void* baton, object_t* args){
-  object_t* obj;
-  DFSCH_OBJECT_ARG(args, obj);
-  DFSCH_ARG_END(args);
-
-  return dfsch_bool(dfsch_hash_p(obj));
-}
-object_t* native_hash_ref(void* baton, object_t* args){
-  object_t* hash;
-  object_t* key;
-  DFSCH_OBJECT_ARG(args, hash);
-  DFSCH_OBJECT_ARG(args, key);
-  DFSCH_ARG_END(args);
-
-  return dfsch_hash_ref(hash, key);
-}
-object_t* native_hash_unset(void* baton, object_t* args){
-  object_t* hash;
-  object_t* key;
-  DFSCH_OBJECT_ARG(args, hash);
-  DFSCH_OBJECT_ARG(args, key);
-  DFSCH_ARG_END(args);
-
-  return dfsch_hash_unset(hash, key);
-}
-object_t* native_hash_set(void* baton, object_t* args){
-  object_t* hash;
-  object_t* key;
-  object_t* value;
-  DFSCH_OBJECT_ARG(args, hash);
-  DFSCH_OBJECT_ARG(args, key);
-  DFSCH_OBJECT_ARG(args, value);
-  DFSCH_ARG_END(args);
-
-  return dfsch_hash_set(hash, key, value);
-}
-object_t* native_hash_set_if_exists(void* baton, object_t* args){
-  object_t* hash;
-  object_t* key;
-  object_t* value;
-  DFSCH_OBJECT_ARG(args, hash);
-  DFSCH_OBJECT_ARG(args, key);
-  DFSCH_OBJECT_ARG(args, value);
-  DFSCH_ARG_END(args);
-
-  return dfsch_hash_set_if_exists(hash, key, value);
-}
-static object_t* native_hash_2_alist(void *baton, object_t* args){
-  object_t* hash;
-
-  DFSCH_OBJECT_ARG(args, hash);
-  DFSCH_ARG_END(args);
-
-  return dfsch_hash_2_alist(hash);
-}
-
-
-/////////////////////////////////////////////////////////////////////////////
-//
 // Registering function
 //
 /////////////////////////////////////////////////////////////////////////////
@@ -1138,21 +1067,6 @@ dfsch_object_t* dfsch_native_register(dfsch_ctx_t *ctx){
                    dfsch_make_primitive(&native_list_2_vector,NULL));
 
 
-  dfsch_ctx_define(ctx, "make-hash", 
-                   dfsch_make_primitive(&native_make_hash,NULL));
-  dfsch_ctx_define(ctx, "hash?", 
-                   dfsch_make_primitive(&native_hash_p,NULL));
-  dfsch_ctx_define(ctx, "hash-ref", 
-                   dfsch_make_primitive(&native_hash_ref,NULL));
-  dfsch_ctx_define(ctx, "hash-unset!", 
-                   dfsch_make_primitive(&native_hash_set,NULL));
-  dfsch_ctx_define(ctx, "hash-set!", 
-                   dfsch_make_primitive(&native_hash_set,NULL));
-  dfsch_ctx_define(ctx, "hash-set-if-exists!", 
-                   dfsch_make_primitive(&native_hash_set_if_exists,NULL));
-  dfsch_ctx_define(ctx, "hash->alist", 
-                   dfsch_make_primitive(&native_hash_2_alist,NULL));
-
   dfsch_ctx_define(ctx, "delay", 
                    dfsch_make_form(dfsch_make_primitive(&native_form_delay,
                                                         NULL)));
@@ -1167,6 +1081,7 @@ dfsch_object_t* dfsch_native_register(dfsch_ctx_t *ctx){
   dfsch_ctx_define(ctx, "stream-cdr", 
                    dfsch_make_primitive(&native_stream_cdr,NULL));
 
+  dfsch__hash_native_register(ctx);
 
   return NULL;
 }
